h2 covering while navigating in small devices fixed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 
 html {
     overflow-x: hidden;
+    scroll-padding-top: 80px;
   }
   body {
     /* works only, when "nothing absolutely positioned" in 'relation to body' */
